# Others

./: README.md
CMake_Tutorial/code/simpleGCC/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hex.h  main.c
CMake_Tutorial/code/simpleProject/: CMakeLists.txt
CMake_Tutorial/code/simpleProject/decCov/: CMakeLists.txt
CMake_Tutorial/code/simpleProject/decCov/include/: dec2bin.h  dec2hex.h  dec2oct.h  decCov.h
CMake_Tutorial/code/simpleProject/decCov/src/: decCov.c  main.c
CMake_Tutorial/code/simpleProject/hexCov/: CMakeLists.txt
CMake_Tutorial/code/simpleProject/hexCov/include/: hex2bin.h  hex2dec.h  hex2otc.h  hexCov.h
CMake_Tutorial/code/simpleProject/hexCov/src/: hexCov.c  main.c  testLib.c
CMake_Tutorial/code/simpleProject/octCov/: CMakeLists.txt
CMake_Tutorial/code/simpleProject/octCov/include/: oct2bin.h  oct2dec.h  oct2hex.h  octCov.h
CMake_Tutorial/code/simpleProject/octCov/src/: main.c  octCov.c
CMake_Tutorial/code/simpleProject/src/: CMakeLists.txt  main.c
CMake_Tutorial/markdown/: 1_快速体验VSCode和CMake创建C_C++项目.md  2_CMake语法的基本指令.md  3_CMake配置项目的基本指令.md
CMake_Tutorial/markdown/flowcharts/: CMakes生成可执行文件的原理.excalidraw  CMake工程的基本流程.excalidraw  CMake文件的基本要素.excalidraw  CMake项目组成.excalidraw  静态库的目的.excalidraw
Chrome_Playing_Monitor/: background.js  content.js  manifest.json  popup.html  popup.js
Chrome_Proxy_Switcher/: manifest.json  popup.html  styles.css
Chrome_Proxy_Switcher/modules/: background.js  popup.js
Custom_GitBash/: git-prompt.sh
How_To_Create_A_Python_Project/code/: app.py  config.yaml  tempCodeRunnerFile.py
How_To_Create_A_Python_Project/code/scripts/lib/: config.py  log.py
How_To_Create_A_Python_Project/markdown/: How_To_Create_A_Python_Project_By_VSCode.md
Ubuntu_Hack/: ubuntu_hack.sh
